make section 6 and 7

--- a/Appy/styles/_variables.scss
+++ b/Appy/styles/_variables.scss
@@ -2,14 +2,18 @@
 
 $body-font: 'Roboto', sans-serif;
 // $new-font: Manrope,sans-serif;
-
+$BlueGray-100 :#F1F5F9;
 $BlueGray-200 :#E2E8F0;
 $BlueGray-300 :#CBD5E1;
+$BlueGray-400 :#94A3B8;
 $BlueGray-600 :#475569;
 $BlueGray-900 :  #21272A;
 $Blue-600 : #0F62FE;
 
 $White : #FFFFFF;
+
+$yellow-500: #EAB308;
+$red-500: #EF4444;
 
 $body-font-size :16px;
 
