--- a/Appy/styles/styles.scss
+++ b/Appy/styles/styles.scss
@@ -129,10 +129,11 @@
 .hero-buttons {
   display: flex;
   flex-direction: row;
-  gap: 20px;
+  gap: 48px;
 }
 
 .btn-get-started {
+  font-family: $body-font;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -149,10 +150,11 @@
 
 .btn-watch-video {
 @include Button-L;
+font-family: $body-font;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 8px;
+  gap: 15px;
   text-decoration: none;
   transition: all 0.3s ease;
   
@@ -162,18 +164,20 @@
 }
 
 .video-icon {
+  padding-left: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .hero-image {
+      // max-width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   
   // img {
-  //   max-width: 100%;
+  //   // max-width: 100%;
   //   height: auto;
   // }
 }
@@ -198,17 +202,20 @@
   gap: 16px;
 }
 .fe-heading{
+  font-family: $body-font;
   @include Heading6;
   color: $BlueGray-900;
 }
 
 .fe-text{
+  font-family: $body-font;
   text-align: center;
   @include Body-L;
   color: $BlueGray-900;
 }
 
 .tab{
+  font-family: $body-font;
   display: flex;          
   align-items: center;     
   justify-content: center;
@@ -216,17 +223,24 @@
 
 //slider1 and 2 section3 and 4
 .slider1-content, .slider2-content{
+  font-family: $body-font;
   display: flex;
   flex-direction: column;
   padding-top: 60px;
   gap: 80px;
 }
+.slider2-content{
+  padding-bottom: 80px;
+}
+
 .s1-heading, .s2-heading {
+  font-family: $body-font;
   color: $BlueGray-900;
   @include Heading2;
 }
 
 .s1-subheading, .s2-subheading {
+  font-family: $body-font;
   color: $BlueGray-900;
   @include Body-L;
   font-family: $body-font;
@@ -249,6 +263,7 @@
 }
 
 .accordion-header {
+  font-family: $body-font;
   width: 100%;
   padding: 8px 8px 8px 48px;
   position: relative;
@@ -259,18 +274,16 @@
 }
 
 .accordion-content {
+  font-family: $body-font;
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.3s ease-out;
   padding-left: 48px;
   padding-right: 8px;
   width: 100%;
-  opacity: 0;
-  transition: max-height 0.3s ease, opacity 0.3s ease;
-  
+
   &.active {
     max-height: 200px;
-    opacity: 1;
     padding-top: 16px;
     padding-bottom: 16px;
   }
@@ -281,6 +294,7 @@
   }
 }
 .slider2-btn {
+  font-family: $body-font;
     color: $White;
     text-decoration: none;
     @include All-Button;
@@ -298,11 +312,212 @@
   margin-top: 40px;
 }
 
+//slider3 
+.slider3-section{
+  padding: 60px 0;
+  background-color: $BlueGray-100;
+  // position: relative;
+  overflow: hidden; 
+
+}
+.carousel-rows {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.main-container {
+  max-width: 1280px;
+  width: 100%;
+  position: relative;
+}
+
+.inner-container{
+max-width: 1136px;
+width: 100%;
+  margin: 0 auto;
+  overflow: hidden;
+  display: flex;
+  gap: 80px;
+
+}
+
+.carousel-slide {
+  position: relative;
+}
+
+// .carousel-img{
+//   width: 630%;
+//   height: 420%;
+//   object-fit: cover;
+// }
+
+.carousel-img {
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.carousel-item1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.carousel-item2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.carousel-content {
+  display: flex;
+  flex-direction: column;
+  margin-left: 30px;
+  gap: 48px;
+  height: 100%;
+}
+
+.carousel-heading {
+  position: relative;
+  margin-bottom: 10px;
+  @include Caption-M;
+  color: $BlueGray-600;
+}
+
+.carousel-text {
+  @include Body-XXL;
+  color: $BlueGray-900;
+  margin-bottom: 16px;
+
+}
+
+
+
+
+.highlight-end {
+  color: $red-500;
+  @include Heading5;
+}
+  .highlight-start {
+    color: $yellow-500;
+    // padding: 0 4px;
+    @include Heading5;
+}
+
+
+.carousel-heads {
+  color: $BlueGray-900;
+  @include Body-L;
+}
+
+.name {
+  color: $BlueGray-900;
+  @include Subtitle-XL;
+}
+
+.carousel-control-prev{
+  left: -50px;
+}
+
+.carousel-control-next {
+  // width: 15px;
+  // height: 30px;
+  right: -50px;
+  
+}
+
+
+// .carousel-control-prev-icon{
+// .carousel-control-next-icon {
+
+// }
+// }
+
+// Custom Indicators
+.carousel-indicators {
+  // position: relative;
+  // margin-top: 30px;
+  margin-right: 20px;
+  margin-bottom: 50px;
+
+  
+  [data-bs-target] {
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background-color: $BlueGray-400;
+    margin: 0 5px;
+    transition: width 0.3s ease;
+  }
+  
+  .active {
+    width: 40px;
+    background-color: $Blue-600;
+    // border-radius: 13px;
+    border-radius: 20px;
+    // padding: 0 5px; 
+    
+  }
+}
+////////////question section
+.que-section{
+  display: flex;
+  gap: 80px;
+  padding-top: 80px;
+}
+.que-heading{
+  font-family: $body-font;
+  @include Heading2;
+  color: $BlueGray-900;
+  margin-bottom: 30px;
+}
+
+.accordion-button{
+  font-family: $body-font;
+  @include Body-XXL;
+  color: $Blue-600;
+  border-top: 1px solid $BlueGray-200;
+}
+.accordion-item{
+  border: none;
+  
+}
+.accordion-body{
+padding-left: 60px;
+}
+
+
+
 
 
 // Media Queries
 @media (max-width: 1400px) {
- 
+  .hero-image {
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+}
+// .slider3-section {
+//   .carousel-img {
+//     max-width: 100%;
+//     height: auto;
+//   }
+// }
+
+.slider3-section {
+  .carousel-img {
+    max-width: 100%;
+    height: auto;
+  }
+  
+  .inner-container {
+    max-width: 90%;
+    gap: 60px;
+  }
+}
+
 }
 
 @media (max-width: 1200px) {
@@ -319,13 +534,26 @@
   .slider1-section, .slider2-section {
     // padding: 60px 0;
   }
+
+  .slider3-section {
+    padding: 50px 0;
+    
+    .inner-container {
+      gap: 40px;
+    }
+    
+    .carousel-content {
+      gap: 36px;
+    }
+    
+  
+  }
+
+
+ 
 }
 
 @media (max-width: 992px) {
-  .hero-img{
-    max-width: 100%;
-    height: auto;
-  }
 //navbar-section
     .navbar-container {
         height: auto;
@@ -339,21 +567,49 @@
         margin-left: 0;
       }
   // Hero Section
+  // .hero-img{
+  //   // max-width: 100%;
+  //   // height: auto;
+
+  //   img {
+  //     max-width: 100%;
+  //     height: auto;
+  //   }
+  // }
+  
   .hero-section {
-    padding: 60px 0;
+    // padding: 60px 0;
+    padding: 48px 16px;
+    gap: 32px;
     text-align: center;
   }
 
   .hero-row {
     flex-direction: column;
+    
   }
 
   .hero-content {
-    margin-bottom: 40px;
+    display: flex;
+    flex-direction: column;
+    padding: 0px 8px;
+    gap: 24px;
   }
 
   .hero-buttons {
     justify-content: center;
+    display: flex;
+    gap: 32px;
+  }
+  
+  .btn-get-started {
+    @include Button-M;
+    padding: 12px;
+  }
+
+  .btn-watch-video {
+    @include Button-M;
+    padding: 12px 8px;
   }
   //feature section
   .fe-row {
@@ -372,16 +628,63 @@
     gap: 40px;
   }
   
-  .s1-img, .s2-img {
-    // max-width: 80%;
-    // margin: 0 auto;
-    // display: block;
-  }
+  // .s1-img, .s2-img {
+  //   // max-width: 80%;
+  //   // margin: 0 auto;
+  //   // display: block;
+  // }
+  
   //accodian
   
   .accordion-container {
     // padding: 16px;
   }
+  ///////////
+  .slider3-section {
+    padding: 45px 0;
+    
+    .inner-container {
+      gap: 30px;
+    }
+    
+    .carousel-rows {
+      flex-direction: column;
+    }
+    
+    .carousel-item1, .carousel-item2 {
+      width: 100%;
+    }
+    
+    .carousel-content {
+      margin-left: 0;
+      margin-top: 30px;
+      text-align: center;
+      align-items: center;
+      gap: 24px;
+    }
+    
+    .carousel-heads {
+      text-align: center;
+    }
+    
+    .carousel-control-prev {
+      left: -40px;
+    }
+    
+    .carousel-control-next {
+      right: -40px;
+    }
+  }
+  
+.que-heading{
+  @include Heading5;
+
+}
+
+.accordion-button{
+  @include Body-L;
+
+}
 }
 
 @media (max-width: 768px) {
@@ -397,9 +700,9 @@
         margin-bottom: 10px;
       }
   // Hero Section
-  .hero-content {
-    padding: 40px 30px;
-  }
+  // .hero-content {
+  //   // padding: 40px 30px;
+  // }
 
   .hero-title {
     @include Heading4;
@@ -408,22 +711,23 @@
     @include Body-M;
   }
 
-  .btn-get-started {
-    @include Button-M;
-    padding: 12px 18px;
-  }
+  // .btn-get-started {
+  //   @include Button-M;
+  //   padding: 12px 18px;
+  // }
 
-  .btn-watch-video {
-    padding: 12px 8px;
-  }
+  // .btn-watch-video {
+  //   padding: 12px 8px;
+  // }
   .hero-buttons {
     gap: 32px;
   }
 
   .hero-img{
+    
     max-width: 100%;
     height: auto;
-  }
+      }
 
 
 
@@ -478,6 +782,70 @@
 
     }
   }
+ /////////////
+ .slider3-section {
+  padding: 40px 0;
+  
+  .inner-container {
+    max-width: 95%;
+    gap: 20px;
+  }
+  
+  .carousel-text {
+    @include Body-L;
+  }
+  
+  .carousel-control-prev {
+    left: -30px;
+  }
+  
+  .carousel-control-next {
+    right: -30px;
+  }
+  
+  .carousel-indicators {
+    margin-bottom: 30px;
+    
+    [data-bs-target] {
+      width: 6px;
+      height: 6px;
+    }
+    
+    .active {
+      width: 30px;
+    }
+  }
+  .slider3-section {
+    .main-container {
+      padding: 0 15px; 
+      margin: 0 auto; 
+    }
+    
+    .inner-container {
+      max-width: 100%; 
+      padding: 0; 
+      margin: 0 auto; 
+      gap: 20px;
+    }
+    
+    .carousel-item {
+      display: flex;
+      justify-content: center;
+      
+      .carousel-rows {
+        width: 100%; 
+        margin: 0;
+      }
+    }
+        .carousel-inner {
+      width: 100%;
+      overflow: hidden;
+      position: relative;
+    }
+  }
+}
+  
+
 }
 
 @media (max-width: 576px) {
@@ -488,8 +856,6 @@
  
 
   .btn-watch-video {
-    // width: 130px;
-    // font-size: 16px;
     padding: 12px 8px;
   }
 
@@ -569,4 +935,71 @@
       padding-bottom: 12px;
     }
   }
+
+
+  // .carousel-control-prev,
+  // .carousel-control-next {
+  //   display: none;
+  // }
+  .slider3-section {
+    padding: 32px 16px;
+    
+    .main-container {
+      width: 100%;
+      max-width: 100%;
+        }
+    
+    .inner-container {
+      max-width: 100%;
+      gap: 16px;
+    }
+    
+    .carousel-img {
+      max-width: 90%;
+    }
+    
+    .carousel-content {
+      margin-top: 24px;
+      gap: 16px;
+      padding: 0 10px;
+    }
+    
+    .carousel-heading {
+      @include Caption-M;
+    }
+    .carousel-item1, .carousel-item2 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0 15px; 
+    }
+    
+    .carousel-text {
+      @include Body-L;
+    }
+  
+    .highlight-start, .highlight-end {
+      @include Heading6;
+    }
+    
+    .carousel-control-prev,
+    .carousel-control-next {
+      display: none;
+    }
+    
+    .carousel-indicators {
+      margin-bottom: 16px;
+      
+      [data-bs-target] {
+        width: 5px;
+        height: 5px;
+        margin: 0 4px;
+      }
+      
+      .active {
+        width: 24px;
+      }
+    }
+  }
 }
+
